fixed overflow on x axis

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 @import 'colors';
 @import 'animation';
 
-* {
+*,
+*::after,
+*::before {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -41,6 +43,8 @@ nav {
 	text-transform: uppercase;
 	transition: background-color 0.6s;
 	z-index: 1;
+	margin: 0;
+	padding: 0;
 	a,
 	.nav-link {
 		color: $white;
@@ -121,18 +125,12 @@ header {
 	}
 
 	.fa-chevron-down {
-		width: 100%;
-		text-align: center;
-		font-size: 60px;
-		padding: 20px;
-		color: $white;
-	}
-
-	.chevron-div {
 		position: absolute;
-		bottom: 80px;
+		bottom: 20px;
 		left: 50%;
 		transform: translateX(-50%);
+		font-size: 40px;
+		color: $white;
 	}
 }
 
@@ -206,7 +204,7 @@ header {
 
 .prices {
 	.price-box {
-		margin: 0 30px;
+		margin: 0px;
 		padding: 30px;
 		background-color: $white;
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
@@ -237,7 +235,7 @@ header {
 	}
 
 	.price-box:hover {
-		transform: scale(1.1);
+		transform: scale(.9);
 	}
 }
 .text-center {
